--- a/src/assets/sass/loginform.scss
+++ b/src/assets/sass/loginform.scss
@@ -1,7 +1,4 @@
 .wrapper-login-page {
-    width: 100vw;
-    height: 100vh;
-
     .wrapper-login-form {
         width: 100%;
         height: 100%;
@@ -12,23 +9,35 @@
         }
 
         .side-left {
-            width: 65%;
-            height: 100vh;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            flex: 0 0 62%;
+            height: 100vh;
             background-color: $primary;
 
+            @media screen and (max-width: 768px) {
+                display: none;
+            }
+
+            @media screen and (max-width: 1024px) {
+                flex: 0 0 50%;
+            }
+
             .wrapper-content {
-                width: 746px;
-                height: 613px;
+                width: 100%;
+                max-width: 45vw;
+                height: 100%;
+                max-height: 75vh;
                 display: flex;
+                flex-direction: column;
                 align-items: center;
+                margin: auto;
                 background-color: rgba($white, 0.4);
                 backdrop-filter: blur(24px);
 
                 .content {
-                    margin: auto 308px auto 91px;
+                    display: flex;
+                    flex-direction: column;
+                    margin: auto auto auto 15%;
 
                     .title {
                         max-width: 285px;
@@ -47,6 +56,7 @@
                     }
 
                     .description {
+                        max-width: 347px;
                         color: $dark-violet;
                         font-size: 18px;
                     }
@@ -55,73 +65,92 @@
         }
 
         .side-right {
-            width: 35%;
-            height: 100vh;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            flex: 0 0 38%;
+            height: 100vh;
             background-color: $white;
+
+            @media screen and (max-width: 768px) {
+                flex: 0 0 100%;
+            }
+
+            @media screen and (min-width: 769px) and (max-width: 1024px) {
+                flex: 0 0 50%;
+            }
+
 
             .wrapper-content {
                 width: 100%;
-                padding: 100px;
+                max-width: 480px;
+                margin: auto;
 
-
-                .title {
-                    color: $dark-violet;
-                    font-size: 32px;
-                    font-weight: 700;
-                    line-height: 150%;
-                    margin-bottom: 8px;
-                }
-
-                .description {
-                    color: $dark-violet;
-                    margin-bottom: 40px;
-                }
-
-                .section-remember-me-forgot-password {
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: center;
-                    margin-bottom: 24px;
-
-                    .forgot-password {
-                        color: #000;
-                        font-size: 16px;
-                        font-style: normal;
-                        font-weight: 400;
-                        line-height: 100%;
-                    }
-                }
-
-                .section-buttons-login-signup {
-                    display: flex;
-                    gap: 24px;
-                    margin-bottom: 42px;
-
-                    .button-signup {
-                        border: 1px solid $dark-violet;
-                    }
-                }
-
-                .section-login-other {
+                .content {
                     display: flex;
                     flex-direction: column;
-                    text-align: center;
-                    gap: 16px;
+                    height: 100%;
+                    margin: auto;
+                    padding: 32px;
 
-
-                    .title {
-                        font-size: 14px;
-                        font-style: normal;
-                        font-weight: 400;
-                        line-height: 100%;
+                    @media screen and (max-width: 425px) {
+                        padding: 24px;
                     }
 
-                    .section-buttons {
+                    .title {
+                        color: $dark-violet;
+                        font-size: 32px;
+                        font-weight: 700;
+                        line-height: 150%;
+                        margin-bottom: 8px;
+                    }
+
+                    .description {
+                        color: $dark-violet;
+                        margin-bottom: 40px;
+                    }
+
+                    .section-remember-me-forgot-password {
                         display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        margin-bottom: 24px;
+
+                        .forgot-password {
+                            color: #000;
+                            font-size: 16px;
+                            font-style: normal;
+                            font-weight: 400;
+                            line-height: 100%;
+                        }
+                    }
+
+                    .section-buttons-login-signup {
+                        display: flex;
+                        gap: 24px;
+                        margin-bottom: 42px;
+
+                        .button-signup {
+                            border: 1px solid $dark-violet;
+                        }
+                    }
+
+                    .section-login-other {
+                        display: flex;
+                        flex-direction: column;
+                        text-align: center;
                         gap: 16px;
+
+
+                        .title {
+                            font-size: 14px;
+                            font-style: normal;
+                            font-weight: 400;
+                            line-height: 100%;
+                        }
+
+                        .section-buttons {
+                            display: flex;
+                            gap: 16px;
+                        }
                     }
                 }
             }
